# python_project_template

./: .gitignore  .pre-commit-config.yaml  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  copier.yml  justfile  pyproject.toml  test-template.sh
.github/agents/: ci-fixer.agent.md
.github/instructions/: copilot-instructions.md  markdown-instructions.md  python_instructions.md
.github/skills/git-commit/: SKILL.md
.github/skills/github-actions-failure-debugging/: SKILL.md
.github/skills/make-skill-template/: SKILL.md
.github/workflows/: lint.yml  tests.yml
scripts/: test-template.sh  update_files.sh  update_skills.sh
template/: .copier-answers.yml.jinja  .gitignore  .gitignore.jinja  .pre-commit-config.yaml  .pre-commit-config.yaml.jinja  CONTRIBUTING.md.jinja  LICENSE.jinja  README.md.jinja  justfile.jinja  mkdocs.yml.jinja  pyproject.toml.jinja
template/.github/: CODE_OF_CONDUCT.md.jinja  CONTRIBUTING.md.jinja  FUNDING.yml.jinja  PULL_REQUEST_TEMPLATE.md.jinja  SECURITY.md.jinja
template/.github/ISSUE_TEMPLATE/: bug_report.md.jinja  feature_request.md.jinja
template/.github/agents/: ci-fixer.agent.md.jinja
template/.github/instructions/: python_instructions.md.jinja
template/.github/skills/github-actions-failure-debugging/: SKILL.md.jinja
template/.github/skills/make-skill-template/: SKILL.md.jinja
template/.github/workflows/: ci.yml.jinja  docs.yml.jinja  lint.yml.jinja  publish.yml.jinja  release-drafter.yml.jinja
template/docs/: api.md.jinja  design.md.jinja  index.md.jinja
template/src/core/: file_manager.py.jinja  logging_manager.py.jinja  utils.py.jinja
template/tests/properties/: test_properties.py.jinja
template/tests/unit/: test_core.py.jinja
tests/: test_template.py
