# ==========================================================================
# Template Repository Metadata
# ==========================================================================

[project]
name = "python-project-template"
version = "0.1.0"
description = "A modern Copier-based Python library template (uv, ruff, basedpyright)"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = { file = "LICENSE" }

authors = [
    { name = "Your Name", email = "you@example.com" }
]

keywords = [
    "copier",
    "template",
    "python",
    "uv",
    "ruff",
    "basedpyright",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "copier>=9.11.2",
    "jinja2-time>=0.2.0",
]

[project.urls]
Homepage = "https://github.com/your-org/python-project-template"
Repository = "https://github.com/your-org/python-project-template"
Issues = "https://github.com/your-org/python-project-template/issues"

# ==========================================================================
# Optional Dependencies (for working on the template itself)
# ==========================================================================

[project.optional-dependencies]

dev = [
    "copier>=9.11.2",
    "pre-commit>=3.7.0",
    "ruff>=0.14.0",
    "basedpyright>=1.21.0",
]

docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
]

test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

# ==========================================================================
# Build System (minimal, template-only)
# ==========================================================================

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Include the template source directory so hatchling can build editable installs
only-include = ["template/src/{{ package_name }}"]

[tool.hatch.build.targets.sdist]
# Include template files and configuration
include = [
    "template/",
    "copier.yml",
    "README.md",
    "LICENSE",
]

# ==========================================================================
# Ruff Configuration (for the template repo itself)
# ==========================================================================

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "RUF"]

# ==========================================================================
# BasedPyright (template repo only)
# ==========================================================================

[tool.basedpyright]
typeCheckingMode = "basic"
pythonVersion = "3.11"

# ==========================================================================
